--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "com.staples.drawertest"
+        applicationId "com.staples.mobile"
         minSdkVersion 15
         targetSdkVersion 20
         versionCode 1
