--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,13 @@
     <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="20"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
-        android:name=".MainApplication"
+        android:name=".cfa.MainApplication"
         android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.staples.mobile.MainActivity"
+            android:name=".cfa.MainActivity"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
