--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.staples.mobile"
-    android:versionCode="1"
-    android:versionName="0.0.5">
+    android:versionCode="2"
+    android:versionName="Kendall">
     <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="20"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
