--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,9 +13,18 @@ android {
     }
 
     packagingOptions {
-        exclude 'META-INF/LICENSE'
+        exclude 'LICENSE.txt'
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
         exclude 'META-INF/NOTICE'
-    }
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'    }
+
 }
 
 dependencies {
@@ -28,6 +37,8 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.6.1'
     compile 'com.squareup.retrofit:converter-jackson:1.6.1'
     compile 'com.squareup.picasso:picasso:2.3.4'
+
+    //androidTestCompile ('com.jayway.android.robotium:robotium-solo:5.2+')
 
     androidTestCompile 'org.hamcrest:hamcrest-integration:1.1'
     androidTestCompile 'org.hamcrest:hamcrest-core:1.1'
@@ -64,3 +75,7 @@ task showReport {
 }
 
 // test {finalizedBy showReport}
+
+dependencies{
+    androidTestCompile fileTree(dir: 'libs', include: ['*.jar'])
+}
