--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="20"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
+		android:name="com.staples.mobile.cfa.MainApplication"
         android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
