Object model add to cart test added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile 'com.squareup.retrofit:converter-jackson:1.6.1'
     compile 'com.squareup.picasso:picasso:2.3.4'
     //androidTestCompile ('com.jayway.android.robotium:robotium-solo:5.2+')
+    androidTestCompile "org.mockito:mockito-core:1.+"
     androidTestCompile 'org.hamcrest:hamcrest-integration:1.1'
     androidTestCompile 'org.hamcrest:hamcrest-core:1.1'
     androidTestCompile 'org.hamcrest:hamcrest-library:1.1'
