--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.staples.mobile"
-    android:versionCode="5"
+    package="com.staples.mobile.cfa"
+    android:versionCode="6"
     android:versionName="Kendall">
     <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="21"/>
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -9,13 +9,13 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <application
-		android:name="com.staples.mobile.cfa.MainApplication"
+		android:name=".MainApplication"
         android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".cfa.MainActivity"
+            android:name=".MainActivity"
             android:launchMode="singleInstance"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
