--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,15 +49,15 @@ configurations.all {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:21+'
-    compile 'com.android.support:cardview-v7:21+'
-    compile 'com.android.support:recyclerview-v7:21+'
-    compile 'com.squareup.okhttp:okhttp:+'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:+'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
-    compile 'com.squareup.retrofit:retrofit:1.6.1'
-    compile 'com.squareup.retrofit:converter-jackson:1.6.1'
-    compile 'com.squareup.picasso:picasso:2.3.4'
+    compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.android.support:cardview-v7:21.0.3'
+    compile 'com.android.support:recyclerview-v7:21.0.3'
+    compile 'com.squareup.okhttp:okhttp:2.2.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.5.0'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.retrofit:converter-jackson:1.9.0'
+    compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.google.android.gms:play-services-location:6.5.87'
     compile 'com.google.android.gms:play-services-maps:6.5.87'
     //androidTestCompile ('com.jayway.android.robotium:robotium-solo:5.2+')
