--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,7 @@ dependencies {
         exclude module: 'wagon-provider-api'
     }
     compile project(':..:android-common:common')
+    compile files('libs/adobeMobileLibrary-4.4.0.jar')
 }
 
 task showTest {
