--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:6.5.87'
     compile 'com.google.android.gms:play-services-maps:6.5.87'
     compile 'com.crittercism:crittercism-android-agent:5.0.4'
+    compile 'com.apptentive:apptentive-android:1.7.0@aar'
     compile(name: 'urbanairship-lib-5.1.5', ext: 'aar')
 
     androidTestCompile 'org.hamcrest:hamcrest-integration:1.1'
