--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <receiver android:name=".notify.IntentReceiver"
+        <receiver android:name=".notify.NotifyReceiver"
                   android:exported="false">
             <intent-filter>
                 <action android:name="com.urbanairship.push.CHANNEL_UPDATED"/>
