QA flavor build files

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
     }
 
     productFlavors {
+        qa {
+            versionName "Kendall-qa"
+        }
         dev {
             versionName "Kendall-dev"
         }
