Sort fix, local versus server sort

--- a/app/src/main/assets/airshipconfig.properties
+++ b/app/src/main/assets/airshipconfig.properties
@@ -4,4 +4,4 @@ developmentAppSecret = rO5lnuhDS_KwEXWJsZTlsQ
 productionAppKey = Your Production App Key
 productionAppSecret = Your Production App Secret
 inProduction = false
-
+analyticsEnabled = false
