--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.staples.mobile.cfa"
-    android:versionCode="7"
-    android:versionName="Kendall">
+    package="com.staples.mobile.cfa">
     <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="22"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
@@ -82,7 +80,6 @@
                 <category android:name="${applicationId}"/>
             </intent-filter>
         </receiver>
-
         <service android:name="com.urbanairship.push.PushService" android:label="Push Notification Service"/>
         <service android:name="com.urbanairship.richpush.RichPushUpdateService" android:label="Rich Push Update Service"/>
         <service android:name="com.urbanairship.actions.ActionService" android:label="Action Service"/>
