--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,6 @@ android {
     compileSdkVersion 22
     buildToolsVersion "22.0.0"
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-
     ext {
         versionPrefix = '4.0.0.1'
     }
@@ -19,7 +12,6 @@ android {
         applicationId 'com.staples.mobile.cfa'
         versionCode 19
     }
-
 
     productFlavors {
         qa {
@@ -30,6 +22,12 @@ android {
         }
         prod {
             versionName versionPrefix+'-prod-'+defaultConfig.versionCode
+            buildTypes {
+                debug {
+                    minifyEnabled true
+                    proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+                }
+            }
         }
     }
 
