--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.staples.mobile.cfa">
     <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="22"/>
-
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <!-- This is will enhance the device ID for Kount -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"/>
+    <!-- For Urban Airship-->
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <permission android:name="${applicationId}.permission.UA_DATA" android:protectionLevel="signature" />
     <uses-permission android:name="${applicationId}.permission.UA_DATA" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
