hmm. build grade somehow was not updated for package name change. here we go, again!

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     }
 
     defaultConfig {
-        applicationId 'com.staples.mobile.cfa'
+        applicationId 'com.staples'
         versionCode 22
     }
     signingConfigs {
