fixing bad quote characters

--- a/app/src/prod/assets/ADBMobileConfig.json
+++ b/app/src/prod/assets/ADBMobileConfig.json
@@ -13,7 +13,7 @@
   },
   "analytics": {
     "rsids": "staplesmobileappprod",
-    "server": “metrics.staples.com”,
+    "server": "metrics.staples.com",
     "ssl": false,
     "offlineEnabled": false,
     "charset": "UTF-8",
