--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,6 @@
     <permission android:name="${applicationId}.permission.C2D_MESSAGE" android:protectionLevel="signature"/>
     <uses-permission android:name="${applicationId}.permission.C2D_MESSAGE"/>
     TODO End of Urban Airship comment -->
-    <uses-permission android:name="android.permission.READ_LOGS"/>
     <application
 		android:name="app.staples.mobile.cfa.MainApplication"
         android:allowBackup="true"
@@ -33,6 +32,12 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:scheme="staples"/>
             </intent-filter>
             <intent-filter>
                 <action android:name="app.staples.mobile.cfa.OPEN_SKU"/>
