--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,8 @@ android {
         }
         prod {
             buildTypes {
-                versionName   calculateVersionName()+"-"+getKickoff()
+                //versionName   calculateVersionName()+"-"+getKickoff()
+                versionName   calculateVersionName()
                 debug {
                     minifyEnabled false
                 }
