--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
     <permission android:name="${applicationId}.permission.C2D_MESSAGE" android:protectionLevel="signature"/>
     <uses-permission android:name="${applicationId}.permission.C2D_MESSAGE"/>
     TODO End of Urban Airship comment -->
+    <supports-screens android:largeScreens="true"
+                      android:normalScreens="true"
+                      android:smallScreens="true"
+                      android:anyDensity="true"/>
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
@@ -46,6 +50,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name="com.apptentive.android.sdk.ViewActivity"
+                  android:theme="@style/Apptentive.Theme.Transparent"/>
         <!-- Support for Adobe Omniture Analytic -->
         <receiver android:name="app.staples.mobile.cfa.analytics.GPBroadcastReceiver" android:exported="true">
             <intent-filter>
