--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,19 +6,13 @@ android {
     compileSdkVersion 22
     buildToolsVersion "22.0.0"
 
-    ext {
-        versionPrefix = '4.0.0.4'
-    }
-
-
     defaultConfig {
         applicationId 'app.staples'
         versionCode calculateVersionCode()
-        versionName   calculateVersionName()+"-"+getKickoff()+"-"+getEnv()
+        versionName calculateVersionName()+"-"+getKickoff()+"-"+getEnv()
         println "***** INFO   code"+defaultConfig.versionCode + "     name: "+ versionName
-
-
     }
+
     signingConfigs {
         release {
             storeFile file("Staples_Release_KeyStore")
@@ -29,16 +23,16 @@ android {
     }
 
     productFlavors {
-        qa {
-            versionName   calculateVersionName()+"-"+getKickoff()+"-"+"qa"
+        dev {
+            versionName   calculateVersionName()+"-"+getKickoff()+"-"+getEnv()
             buildTypes {
                 debug {
                     minifyEnabled false
                 }
             }
         }
-        dev {
-            versionName   calculateVersionName()+"-"+getKickoff()+"-"+getEnv()
+        qa {
+            versionName   calculateVersionName()+"-"+getKickoff()+"-"+"qa"
             buildTypes {
                 debug {
                     minifyEnabled false
@@ -70,23 +64,25 @@ android {
         }
     }
 
+    android.variantFilter { variant ->
+        if (!variant.getFlavors().get(0).name.equals('prod') && variant.buildType.name.equals('release')) {
+            variant.setIgnore(true);
+        }
+    }
+
     packagingOptions {
         exclude 'LICENSE.txt'
-        exclude 'META-INF/DEPENDENCIES.txt'
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/NOTICE.txt'
-        exclude 'META-INF/NOTICE'
-        exclude 'META-INF/LICENSE'
         exclude 'META-INF/DEPENDENCIES'
-        exclude 'META-INF/notice.txt'
-        exclude 'META-INF/license.txt'
+        exclude 'META-INF/DEPENDENCIES.txt'
         exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
         exclude 'META-INF/LGPL2.1'
     }
-}
-
-configurations.all {
-    exclude module: 'gson'
 }
 
 dependencies {
